--- a/index.html
+++ b/index.html
@@ -196,12 +196,12 @@
 <section id="certifications" data-aos="fade-up">
   <h2 class="section-title">Certifications</h2>
   <div class="certificates">
-    <div class="card"><img src="images/infosys.jpg" alt="Infosys"></div>
-    <div class="card"><img src="images/PE1.jpg" alt="PE1"></div>
-    <div class="card"><img src="images/PE2.jpg" alt="PE2"></div>
-    <div class="card"><img src="images/redhat.jpg" alt="Redhat"></div>
-    <div class="card"><img src="images/skill craft complet.jpg" alt="SkillCraft"></div>
-    <div class="card"><img src="images/tcs.jpg" alt="TCS"></div>
+    <div class="card"><img src="infosys.jpg" alt="Infosys"></div>
+    <div class="card"><img src="PE1.jpg" alt="PE1"></div>
+    <div class="card"><img src="PE2.jpg" alt="PE2"></div>
+    <div class="card"><img src="redhat.jpg" alt="Redhat"></div>
+    <div class="card"><img src="skill craft complet.jpg" alt="SkillCraft"></div>
+    <div class="card"><img src="tcs.jpg" alt="TCS"></div>
   </div>
 </section>
 
