--- a/index.html
+++ b/index.html
@@ -208,9 +208,11 @@
 <section id="contact" data-aos="fade-up">
   <h2 class="section-title">Contact</h2>
   <p style="text-align:center">
-    📧 ganatgowthamraju2126@gmail.com<br>
-    📱 +91 9381518810<br>
-    🌐 <a href="https://www.linkedin.com/in/ganta-gowthamraju-9a52aa320/" target="_blank">LinkedIn</a>
+    <p><i class='bx bx-mail-send'></i> <a href="mailto:📧gantagowthamraju2126@gmail.com">Email</a></p>
+    <p><i class='bx bx-phone'></i> <a href="tel:9381518810">9381518810</a></p>
+    <p><i class='bx bxl-linkedin'></i> <a href="https://www.linkedin.com/in/ganta-gowthamraju-9a52aa320/" target="_blank">LinkedIn</a></p>
+    
+
   </p>
   <form>
     
